--- a/resource/css/index.css
+++ b/resource/css/index.css
@@ -39,4 +39,7 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-position: center;
-} 
+}
+.home{
+    margin-left: auto;
+}
